--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,11 @@ body {
 }
 
 .container {
-  width: 80%;
-  max-width: 900px;
+  
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px  10px #00000042;
           box-shadow: 0px 0px  10px #00000042;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  
 }
 
 h1, h3 {
@@ -104,7 +99,17 @@ h1, h3 {
   line-height: 1.8;
 }
 
-@media (min-width: 900px) {
+@media (min-width: 760px) {
+  .container {
+     width: 80%;
+     max-width: 900px;
+
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+   }
   .grid {
     display: -ms-grid;
     display: grid;
